# open-garden-planner

./: .gitignore  .mcp.json  CLAUDE.md  README.md  prd.md  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/agents/: pr-reviewer.md  senior-reviewer.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: add-to-project.yml  ci.yml  release-linux.yml  release.yml
docs/: PLANT_API_SETUP.md  TRANSLATING.md  functional-requirements.md  roadmap.md
docs/01-introduction-and-goals/: README.md  prd.md
docs/02-constraints/: README.md
docs/03-context-and-scope/: README.md
docs/04-solution-strategy/: README.md
docs/05-building-block-view/: README.md
docs/06-runtime-view/: README.md
docs/07-deployment-view/: LINUX_SUPPORT.md  README.md
docs/08-crosscutting-concepts/: README.md
docs/09-architecture-decisions/: README.md
docs/10-quality-requirements/: README.md
docs/11-risks-and-technical-debt/: README.md
docs/12-glossary/: README.md
installer/: build_appimage.py  build_installer.py  ogp.spec  ogp_installer.nsi
scripts/: check_texture_tileability.py  compile_translations.py  fill_translations.py  generate_asset_forge_textures.py  generate_plant_svgs.py  generate_textures.py  svg_preview.py  validate_exports.py
src/open_garden_planner/: __init__.py  __main__.py  _version.py  main.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  conftest.py  test_3d_view.py  test_agent_api_default_on.py  test_agent_api_exports.py  test_agent_api_geometry.py  test_agent_api_render.py  test_agent_api_server.py  test_agent_api_writes.py  test_amendment_calculator.py  test_anchor_snap.py  test_apply_database_species.py  test_arc_tool.py  test_area_labels.py  test_auto_constraint_emit.py  test_background_image_portable.py  test_bed_context_menu.py  test_bezier_tool.py  test_calendar_task_convergence.py  test_callout.py  test_category_toolbar.py  test_change_object_type.py  test_connect_ai_assistant_dialog.py  test_constraint_creation.py  test_constraint_solver_robustness.py  test_container_gardening.py  test_container_roundtrip.py  test_coordinate_input.py  test_curve_vertex_edit.py  test_drawing_workflows.py  test_dynamic_input_overlay.py  test_edge_length_constraints.py  test_ellipse_tool.py  test_export_overlay_hide.py  test_fillet_chamfer.py  test_find_plants_selection.py  test_find_replace.py  test_frost_alerts.py  test_garden_journal.py  test_harvest.py  (+47 more)
tests/ui/: __init__.py  test_calibration_dialog.py  test_canvas.py  test_collapsible_panel.py  test_companion_check_dialog.py  test_companion_panel.py  test_drawing_tools_panel.py  test_export_dialog.py  test_gallery_panel.py  test_grid_array_dialog.py  test_language_menu.py  test_linear_array_dialog.py  test_main_window.py  test_new_project_dialog.py  test_plant_database_panel.py  test_plant_search_panel.py  test_planting_calendar_view.py  test_preferences_dialog.py  test_print_dialog.py  test_properties_panel.py  test_welcome_dialog.py
tests/unit/: test_agent_api_auth.py  test_agent_api_bridge.py  test_agent_api_diagnostics.py  test_agent_api_exports_path_resolution.py  test_agent_api_mapping.py  test_agent_api_prompts.py  test_agent_api_queries.py  test_agent_api_render_coordinate_frame.py  test_agent_api_settings.py  (+115 more)
(+284 files in other folders)
